<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  android:background="#FFFFFFFF">
  <android.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:navigationIcon="@mipmap/icon_back"
    android:title="@string/login_title"
    android:id="@+id/toolbar"
    />
  <ImageView
    android:layout_width="66dp"
    android:layout_height="66dp"
    android:id="@+id/logo_imageview"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="100dp"
    android:layout_alignParentTop="true"
    android:contentDescription="@string/app_logo" />
  <TextView
    android:id="@+id/number_textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_below="@id/logo_imageview"
    android:layout_centerHorizontal="true"
    android:textSize="24sp"
    android:textColor="#FF3D424C"
    android:text="@string/number_textview" />
  <TextView
    android:id="@+id/slogan_textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_below="@id/number_textview"
    android:layout_centerHorizontal="true"
    android:textSize="11sp"
    android:textColor="#FFA8A8A8"
    android:text="@string/slogan_textview"
    />
  <Button
    android:id="@+id/login_button"
    android:layout_width="268dp"
    android:layout_height="wrap_content"
    android:text="@string/btn_text"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/slogan_textview"
    android:layout_marginTop="100dp"
    android:background="@drawable/login_btn_normal"
    android:textColor="#FFFFFFFF"
    android:textSize="15sp"
    android:textAlignment="center"
    android:gravity="center" />
  <CheckBox
    android:id="@+id/privacy_checkbox"
    android:layout_width="16dp"
    android:layout_height="16dp"
    android:button="@null"
    android:background="@drawable/login_checkbox_bg"
    android:layout_marginStart="12dp"
    android:layout_alignTop="@id/privacy_textview"
    />
  <TextView
    android:id="@+id/privacy_textview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_toEndOf="@id/privacy_checkbox"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="12dp"
    android:layout_alignParentBottom="true"
    android:textSize="11sp"
    android:textColor="#FFA8A8A8"
    android:textColorHighlight="#00000000"
    android:text="@string/privacy_textview"
    />
</RelativeLayout>
